# stronglytyped

./: .gitignore  Dockerfile  Makefile  README.md  dune-project  entrypoint.sh  index.html  package.json  project.opam  project.opam.locked  stronglytyped.opam  stronglytyped.opam.locked  ypounercds.dot
analysis/: arrangement.ml  arrangement.mli  bigram_data.ml  bigram_data.mli  config.ml  corpus.ml  corpus.mli  corpus_intf.ml  counter.ml  counter.mli  dune  finger.ml  finger.mli  gen_actor.ml  hand.ml  hand.mli  hand_finger.ml  hand_finger.mli  hand_finger_row.ml  hand_finger_row.mli  hand_row.ml  hand_row.mli  key.ml  key.mli  key_intf.ml  keyboard.ml  keyboard.mli  keyboard_intf.ml  keycode.ml  keycode.mli  keypair.ml  namedlayout.ml  runtime.ml  runtime.mli  score.ml  stats.ml  stats.mli  stats_same_finger.ml  stats_same_finger.mli  stats_same_finger_intf.ml  (+1 more)
analyzer/: analysis.ml  analysis.mli  annealing.ml  cjalg.ml  code.ml  code.mli  config.ml  config.mli  corpus.ml  corpus.mli  dune  finger.ml  finger.mli  hand.ml  hand.mli  hand_finger.mli  hf.ml  hf.mli  import.ml  key.ml  key.mli  keyset.ml  keyset.mli  layout.ml  layout.mli  neighbor.ml  neighbor.mli  ngrams.ml  ngrams.mli  root.ml  root.mli  score.ml  score.mli  stagger.ml  stagger.mli  stats.ml  stats.mli  totals.mli
docker/app/: Dockerfile
docker/lazygit/: Dockerfile
docker/ocamlformat/: Dockerfile
esy.lock/: index.json
generator/: cjalgorithm.ml  cli.ml  cli.mli  control.ml  dune  import.ml  keyboard.ml  mode.ml  run.ml  vars.ml
rpc/: dune  protocol.ml  protocol.mli
scripts/: dev-run.sh
server/: app.ml  driver.ml  dune  import.ml  rpc_implementations.ml  server.ml
src/: .brute_force.ml  .hr.ml  .roll.mli  .shb.ml  .shb.mli  .shs.ml  algorithm.ml  algorithm.mli  algorithm_intf.ml  analysis.ml  analysis.mli  annealing.ml  annealing.mli  brute_force.ml  by_finger.ml  by_finger.mli  by_hand.ml  by_hand.mli  by_hf.ml  by_hf.mli  by_hr.ml  by_hr.mli  cjalg.ml  cli.ml  cli.mli  code.ml  code.mli  config.ml  config.mli  corpus.ml  corpus.mli  dsfb.ml  dsfb.mli  dune  finger.ml  finger.mli  fingermap.ml  fingermap.mli  gen.ml  gen.mli  (+63 more)
static/corpus/: corpus.sexp  dune
static/html/: index.html
stem/: arrangement.ml  arrangement.mli  bigram_data.ml  bigram_data.mli  config.ml  corpus.ml  corpus.mli  corpus_intf.ml  counter.ml  counter.mli  dune  finger.ml  finger.mli  gen_actor.ml  hand.ml  hand.mli  hand_finger.ml  hand_finger.mli  hand_finger_row.ml  hand_finger_row.mli  hand_row.ml  hand_row.mli  key.ml  key_intf.ml  keyboard.ml  keyboard_intf.ml  keycode.ml  keycode.mli  keypair.ml  namedlayout.ml  optimizer.ml  protocol.ml  protocol.mli  runtime.ml  score.ml  stats.ml  stats.mli  stats_same_finger.ml  stats_same_finger.mli  stats_same_finger_intf.ml  (+1 more)
test/: dune  import.ml  mtvap.ml  qwerty.ml  whorf.ml
web/: .example.ml  actions.ml  bigram_data.ml  bigram_data.mli  comments.ml  corpus.ml  corpus.mli  counter.ml  counter.mli  design.ml  dune  import.ml  index.html  key.ml  key.mli  keyboard.ml  keyboard.mli  layoutstore.ml  listview.ml  main.ml  namedlayout.ml  nav.ml  optimizer.ml  runtime.ml  runtime.mli  score.ml  stats.ml  stats.mli  stats_same_finger.ml  stats_same_finger.mli  style.ml  util.ml
web/app/: dune  index.html  main.ml
web/src/: app.ml  dune  import.ml  index.html  keyboard.ml  main.ml  stats.ml  stats2.ml
web/static/: styles.css
