(executable
 (name main)
 (modes js)
 (libraries
  stronglytyped_analysis
  bonsai_web
  bonsai_web_components.web_ui_form
  bonsai_web_components.tailwind_v3_colors
  virtual_dom.keyboard)
 (preprocess
  (pps ppx_jane bonsai.ppx_bonsai ppx_css)))

(install
 (section share)
 (files main.bc.js index.html))
