(executable
 (name main)
 (modes js)
 (libraries
  stronglytyped_stem
  async_kernel
  async_js
  cohttp
  bonsai_web
  bonsai_web_components.web_ui_form
  bonsai_web_components.tailwind_v3_colors
  virtual_dom.keyboard)
 (flags -open Core -open Bonsai_web -open Bonsai.Let_syntax)
 (preprocess
  (pps ppx_jane bonsai.ppx_bonsai ppx_css js_of_ocaml-ppx)))

(install
 (section share)
 (files main.bc.js index.html))
