(library
 (name stronglytyped_web)
 (public_name stronglytyped.web)
 (libraries
  stronglytyped.analyzer
  stronglytyped.generator
  incr_dom
  virtual_dom
  js_of_ocaml
  async_kernel
  async_js
  core)
 (flags -open Core -open Async_kernel -open Async_js)
 (preprocess
  (pps ppx_jane js_of_ocaml-ppx)))
